# DriverBoard_TB6612FNG

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cmake/toolchain/: toolchain.cmake
.ti/: DriverBoard_TB6612FNG.syscfg
Core/Inc/: ti_msp_dl_config.h
Core/Src/: ti_msp_dl_config.c
User/Application/: main.c  uart_protocol.c  uart_protocol.h
User/Board/: motor_board_init.c  motors.h  platform_instances.c  platform_resources.h
User/Device/encoder/: encoder_base.c  encoder_base.h  encoder_incremental.c  encoder_incremental.h
User/Device/interface/: tb6612fng.c  tb6612fng.h
User/Device/motor/: motor_base.c  motor_base.h  motor_bdc.c  motor_bdc.h  motor_servo_pwm.c  motor_servo_pwm.h  motor_tb6612fng.c  motor_tb6612fng.h
User/Platform/: README.md  REVIEW_AND_ROADMAP.md  platform_init.c  platform_init.h
User/Platform/analog/: README.md
User/Platform/arch/: platform_arch.h
User/Platform/communications/: platform_can.c  platform_can.h  platform_i2c.c  platform_i2c.h  platform_spi.c  platform_spi.h  platform_uart.c  platform_uart.h
User/Platform/core/: platform_irq.h  platform_status.h
User/Platform/examples/: README.md  platform_can_example.c  platform_diagnostics_example.c  platform_examples.h  platform_gpio_example.c  platform_i2c_example.c  (+2 more)
User/Platform/tests/: CMakeLists.txt  README.md
User/Platform/tests/fake/: platform_fake_communications.c  platform_fake_communications.h  platform_fake_gpio.c  platform_fake_gpio.h
User/Platform/tests/unit/: platform_contract_test.c
User/Utils/: container_of.h  fixedpoint.h
(+22 files in other folders)
